<resources>
    <string name="app_name">LinkLive</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="register">用户注册</string>
    <string name="action_login">登陆</string>
    <string name="about_text_copyright">一款优秀的社交软件，由五名优秀的在校大学生的精英团队工匠打造，为用户带来一流的使用体验，有效解决了用户在生活中遇到的困难。若在使用过程中有任何疑问，欢迎致电110，或者联系我们15112970246，谢谢你们的支持。我们是OnMars团队！</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_up">注册</string>
    <string name="register_text_username">用户名</string>
    <string name="register_text_phone">手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="action_getcode">获取验证码</string>
    <string name="register_text_password">登陆密码</string>
    <string name="register_text_email">邮箱地址</string>
    <string name="hint_phone">请输入绑定Link的手机账号</string>
    <string name="action_next">下一步</string>
    <string name="hint_birth">生日</string>
    <string name="hint_work">工作</string>
    <string name="hint_email">邮箱地址</string>
    <string name="hint_sign">个性签名</string>
    <string name="hint_location">现居</string>
    <string name="location">广东轻工职业技术学院</string>
    <string name="birth">1996.03.21</string>
    <string name="work">学生</string>
    <string name="sign">所有的\"你好\"都会让我欣喜一整天</string>
    <string name="hint_nickname">昵称</string>
    <string name="hint_avatar">头像</string>
    <string name="hint_sex">性别</string>
    <string name="default_sex">男</string>
    <string name="default_work">程序员</string>
    <string name="default_nickname">度</string>
    <string name="default_email">love@163.com</string>
    <string name="default_username">Turing</string>
    <string name="default_address">广东 佛山</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="choose_province">选择省份</string>
    <string name="choose_city">选择城市</string>
    <string name="choose_county">选择区县</string>
    <string name="title">纵横天下</string>
    <string name="tab_map">地图</string>
    <string name="tab_group">群组</string>
    <string name="tab_message">消息</string>
    <string name="tab_person">我</string>
    <string name="toast_exit">再按一次将退出程序</string>
    <string name="add_friend">添加好友</string>
    <string name="more">更多</string>
    <string name="person_nickname">度</string>
    <string name="person_email">love@163.com</string>
    <string name="person_setting">设置</string>
    <string name="person_about">关于我们</string>
    <string name="person_plugin">插件</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_draft">草稿箱</string>
    <string name="person_share">分享给好友</string>
    <string name="person_chatting">秘密空间</string>
    <string name="hint_search">搜索</string>
    <string name="txt_msg_in">在只有凌晨才不会太拥挤的城市，我披星戴月独自穿行，窗外的一点一滴在此时此刻，才没那么急功近利，岁月平添了我的愁，混杂无形又巨大的压力，这是不是我生命中最难熬的时光。</string>
    <string name="txt_msg_out">想把自己活成一场梦,一首歌一场电影，就算会半梦半醒就算压不上韵,却还是期待所有故事结局。</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_word_size">字体大小</string>
    <string name="setting_news">新消息提醒</string>
    <string name="setting_switchAccount">切换账号</string>
    <string name="action_exit">退出</string>
    <string name="setting_secret">隐私</string>
    <string name="setting_undisturb">勿扰模式</string>
    <string name="setting_account">账号设置</string>
    <string name="setting_general">通用</string>

</resources>
