<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bottom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ToolbarPopupTheme"
        android:elevation="4dp">
        <!--/app:navigationIcon=""-->
        <!--添加左侧返回按钮-->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_gravity="left"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <cn.link.linklive.widget.BottomLayout
            android:id="@+id/map_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            bottom:text="@string/tab_map"
            bottom:top_icon="@drawable/chat_selector" />

        <cn.link.linklive.widget.BottomLayout
            android:id="@+id/group_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            bottom:text="@string/tab_group"
            bottom:top_icon="@drawable/contact_selector" />


        <cn.link.linklive.widget.BottomLayout
            android:id="@+id/message_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            bottom:text="@string/tab_message"
            bottom:top_icon="@drawable/discover_selector" />

        <cn.link.linklive.widget.BottomLayout
            android:id="@+id/person_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            bottom:text="@string/tab_person"
            bottom:top_icon="@drawable/me_selector" />

    </LinearLayout>
</LinearLayout>
