<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgetPwdActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_phone"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@color/login_text_bg"
        />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBg"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:background="@color/login_text_bg"
            android:layout_weight="8"
            />
        <Button
            android:id="@+id/accqure_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/signin_button_bg"
            android:layout_gravity="center_vertical"
            android:text="@string/action_getcode"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBg"
        />
    <Button
        android:id="@+id/action_next"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/action_next"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_14sp"
        />

</LinearLayout>