<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/per_content"
    android:background="@color/colorBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- 个人资料-->
        <LinearLayout
            android:id="@+id/person_profile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_gravity="center"
               android:orientation="vertical"
               >
               <TextView
                   android:id="@+id/txt_profile_nickname"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/person_nickname"
                   android:textColor="@color/grey"
                   android:textSize="@dimen/text_size_14sp" />
               <TextView
                   android:id="@+id/txt_profile_email"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/person_email"
                   />
           </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />


        <!-- 插件-->
        <LinearLayout
            android:id="@+id/person_plugin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_plugin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_plugin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_plugin"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />


        <!-- 关于我们-->
        <LinearLayout
            android:id="@+id/person_about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_about"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_about"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />

        <!-- 意见反馈-->
        <LinearLayout
            android:id="@+id/person_feedback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/img_feedback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_feedback"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />

        <!-- 分享给好友-->
        <LinearLayout
            android:id="@+id/person_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_share"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />


        <!-- 草稿箱-->
        <LinearLayout
            android:id="@+id/person_draft"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/img_draft"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_draft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_draft"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />



        <!-- 秘密空间-->
        <LinearLayout
            android:id="@+id/person_chatting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_chatting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_chatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_chatting"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />

        <!-- 设置-->
        <LinearLayout
            android:id="@+id/person_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/img_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txt_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_setting"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_14sp" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/colorBg"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>